<!--
 Copyright 2015, The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

  <TextView
      android:id="@+id/preparationsHintText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/available_preparations"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:alpha="0"
      />

  <EditText
      android:id="@+id/editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:ems="10"
      android:hint="@string/hint"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="end"
      >

    <Button
        android:id="@+id/preparationModesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparation_modes"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        />

  </LinearLayout>

  <TextView
      android:id="@+id/instructionsText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:text="@string/instructions"
      android:textAppearance="?android:attr/textAppearanceSmall"
      />

  <TextView
      android:id="@+id/inputValidationSuccess"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:background="@drawable/correct"
      android:text="@string/good_choice"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:visibility="gone"
      android:layout_gravity="center_horizontal"
      />

  <TextView
      android:id="@+id/inputValidationError"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:background="@drawable/incorrect"
      android:text="@string/bad_choice"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:visibility="gone"
      android:layout_gravity="center_horizontal"
      />

</LinearLayout>
