<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Multiwindow Sample</string>
    <string name="pick_water">Pick body of water</string>
    <string-array name="bodies_of_water">
        <item>Pacific Ocean</item>
        <item>Atlantic Ocean</item>
        <item>Indian Ocean</item>
        <item>Southern Ocean</item>
        <item>Arctic Ocean</item>
        <item>Mediterranean Sea</item>
        <item>Caribbean Sea</item>
        <item>South China Sea</item>
        <item>Bering Sea</item>
        <item>Gulf of Mexico</item>
        <item>Okhotsk Sea</item>
        <item>East China Sea</item>
        <item>Hudson Bay</item>
        <item>Japan Sea</item>
        <item>Andaman Sea</item>
        <item>North Sea</item>
        <item>Red Sea</item>
        <item>Baltic Sea</item>
    </string-array>
</resources>
